--- a/HelloWorldApp/HelloWorldApp/Views/Shared/_Layout.cshtml
+++ b/HelloWorldApp/HelloWorldApp/Views/Shared/_Layout.cshtml
@@ -12,8 +12,9 @@
     <div id="app"></div>
 
     <!-- Angular App's JS Bundle -->
-    <script src="~/runtime.6d013a6c0da44134.js"></script>
-    <script src="~/polyfills.5cdf16dc2688a42d.js"></script>
-    <script src="~/main.4afc6fdd5f82dffb.js"></script>
+    <script src="~/runtime.js" defer></script>
+    <script src="~/polyfills.js" defer></script>
+    <script src="~/main.js" defer></script>
+    <script src="~/styles.css"></script>
 </body>
 </html>
